1998-06-14  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* defobj.h: Remove mention of what might happen with other
	(nonexistent) zone types.  Remove mention of status of current
	Zone implementation.  Remove mention of -setReclaimPolicy:,
	-setStackedSubzones:, -getSubzones, -mergeWithOwner, -getSubzone:.
	Remove -reclaimStorage, -releaseStorage, xfprint, and xfprintid
	declarations.  Improve description of xsetname, xprint, xprintid,
	xfprint, xfprintid, xexec, and xfexec.

1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* defobj.h: Updated documentation tags.
	(PTRFMT): Use %p.

1998-06-01  Alex Lancaster  <alex@santafe.edu>

	* DefObject.m ([Object_s -xfprintid]): Fixed typo in comment above
	method

	* defobj.h ([DefinedObject -{xfprint,xfprintid}): Added method and
	doc tags that should exist to DefinedObject protocol.

1998-05-28  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* defobj.h: Fix //# doc strings (following colon required).

1998-05-26  Alex Lancaster  <alex@santafe.edu>

	* defobj.h (raiseEvent,M(), initModule, globalZone, scratchZone,
	defsymbol, defwarning, deferror): Added (//#) doc strings.
	(<{Warning,Error}>): Added (//G) doc strings after each definition.
	(<Symbol>, _obj_formatIDString, objc_get_class, _obj_debug,
	(_obj_xerror, *_obj_xdebug, xsetname, xprint, xprintid, xfprint,
	xfprintid, xexec, xfexec): Added (//G) doc strings before each
	definition.

1998-05-06  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* defobj.h: Remove instances of <p> in the documentation.
	Minor changes to method spacing.
	(Create):  Move some documentation from createBegin: to 
	be general documentation. 
	(Error): Add a description.

	* DefObject.m: Minor reformatting.
	(Object_s): Add phase tags. 

1998-05-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* defobj.h: Add CREATING and USING tags where absent.

1998-04-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* defobj.h: Add documentation tags.
